fixing dark mode

--- a/app/globals.css
+++ b/app/globals.css
@@ -3,3 +3,9 @@
   padding: 0;
   margin: 0;
 }
+/* 
+a[ href^="tel"],
+[href^="mailto"] {
+  color: inherit;
+  text-decoration: none;
+} */
